--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/blob": "^1.1.1",
     "next": "15.5.0",
     "openai": "^5.13.1",
     "react": "19.1.0",
