--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "dtf-mvp",
   "version": "0.1.0",
   "private": true,
+{
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",            
     "start": "next start",
-    "lint": "eslint"
-  },
+    "postinstall": "npm rebuild sharp --include=optional || true"  
+  }
+}
+,
   "dependencies": {
     "@vercel/blob": "^1.1.1",
     "next": "15.5.0",
