--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "postinstall": "npm rebuild sharp --include=optional || true"
   },
   "engines": {
-    "node": ">=20"
+    "node": "20.x"
   },
   "dependencies": {
-    "@vercel/blob": "^0.24.0",
+    "@vercel/blob": "^1.1.1",
     "next": "15.5.0",
-    "openai": "^4.60.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "openai": "^5.13.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
@@ -29,7 +29,7 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.9.0",
     "eslint-config-next": "15.5.0",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.5.4"
   }
 }
