--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npm rebuild sharp --include=optional || true && npm rebuild lightningcss --include=optional || true"
+    "postinstall": "npm rebuild sharp --include=optional || true"
+
   },
   "engines": {
     "node": "20.x"
@@ -24,13 +25,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
-    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.14.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-config-next": "15.5.0",
-    "tailwindcss": "^4.1.12",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4"
   }
 }
