--- a/package.json
+++ b/package.json
@@ -35,4 +35,19 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4"
   }
+  {
+  "optionalDependencies": {
+    "@img/sharp-linux-x64": "*",
+    "@img/sharp-libvips-linux-x64": "*",
+    "@img/sharp-linuxmusl-x64": "*",
+    "@img/sharp-libvips-linuxmusl-x64": "*"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "npm rebuild sharp --include=optional || true"
+  }
+}
 }
