fix: valid package.json, tailwind v3, sharp prebuilds, trace prebuilds

--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npm rebuild sharp --include=optional || true"
-
-  },
-  "engines": {
-    "node": "20.x"
   },
   "dependencies": {
     "@vercel/blob": "^1.1.1",
-    "lightningcss": "^1.25.1",
     "next": "15.5.0",
     "openai": "^5.13.1",
     "react": "19.1.0",
@@ -28,26 +26,16 @@
     "@types/node": "^20.14.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-config-next": "15.5.0",
-    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5.5.4"
-  }
-  {
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
+  },
   "optionalDependencies": {
     "@img/sharp-linux-x64": "*",
     "@img/sharp-libvips-linux-x64": "*",
     "@img/sharp-linuxmusl-x64": "*",
     "@img/sharp-libvips-linuxmusl-x64": "*"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npm rebuild sharp --include=optional || true"
   }
-}
 }
