--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": "20.x"
-  },
+  "engines": { "node": "20.x" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,11 +13,14 @@
   },
   "dependencies": {
     "@vercel/blob": "^1.1.1",
+    "autoprefixer": "^10.4.20",
     "next": "15.5.0",
     "openai": "^5.13.1",
+    "postcss": "^8.4.47",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
@@ -28,9 +29,7 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.9.0",
     "eslint-config-next": "15.5.0",
-    "tailwindcss": "^3.4.13",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20"
+    "typescript": "^5.5.4"
   },
   "optionalDependencies": {
     "@img/sharp-linux-x64": "*",
