--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.20",
+    "jimp": "^1.6.0",
     "next": "15.5.0",
     "openai": "^5.13.1",
     "postcss": "^8.4.47",
