--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.20",
+    "image-decode": "^1.2.2",
     "image-js": "^1.0.0",
     "jimp": "^1.6.0",
     "next": "15.5.0",
