--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "npm rebuild sharp --include=optional || true"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.3",
     "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "image-js": "^1.0.0",
