--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "image-js": "^1.0.0",
